--- a/browserViews/variousInfos.twig
+++ b/browserViews/variousInfos.twig
@@ -1,31 +1,29 @@
-<p>Node.js {{versions.node}}, Chromium {{versions.chrome}}, Electron {{versions.electron}} (current i18next language :&nbsp;<span data-translate-id='language'></span>)</p>
+{% if versions -%}
+	<p>Node.js {{versions.node}}, Chromium {{versions.chrome}}, Electron {{versions.electron}} (current i18next language :&nbsp;<span data-translate-id='language'></span>)</p>
+{%- endif %}
 
-{% if versionState %}
+{% if versionState -%}
 	<p>Version actuelle basée sur la branche {{versionState.branch}}, commit du {{versionState.commitDate.toLocaleString()}}.</p>
-{% endif %}
+{%- endif %}
 
-{% if processArgv|length > 0 %}
+{% if processArgv|length > 0 -%}
 	<p>Arguments : {{processArgv|join(', ')}}</p>
-{% endif %}
+{%- endif %}
 
-{% if internetAddress %}
+{% if internetAddress -%}
 	<p>Adresse ip : {{internetAddress}}</p>
-{% endif %}
+{%- endif %}
 
-{% if wsClientNames %}
+{% if wsClientNames -%}
 	<p>Web extensions :</p>
-	<ul class="list-style-inside list-style-disc">
-		{%- for client in wsClientNames %}
-			<li>{{ client }}</li>
-		{%- endfor -%}
-	</ul>
-{% endif %}
+	{% include '_wsClientNames.twig' %}
+{%- endif %}
 
-{% if chromeNativeInstallersStates %}
+{% if chromeNativeInstallersStates -%}
 	<p>Chrome native installations :</p>
 	<ul class="list-style-inside list-style-disc">
 		{%- for browser, item in chromeNativeInstallersStates -%}
 			<li title="{{ item != false ? item.path : '' }}">{%- if item == false -%}❌{%- else -%}✅{%- endif %} {{ browser }}</li>
 		{%- endfor -%}
 	</ul>
-{% endif %}
+{%- endif %}
