--- a/browserViews/css/theme/text-color-white.sass
+++ b/browserViews/css/theme/text-color-white.sass
@@ -24,8 +24,14 @@ input[type='number'],
 input[type='url'],
 textarea,
 
-#tooltip
+#tooltip,
+p,
+.list-style-inside.list-style-disc,
+details summary
 	color: rgba($textColor, 0.8)
+
+details summary ~ *
+	color: rgba($textColor, 0.6)
 
 /*			---- Disabled / Hint text ----			*/
 footer
