refreshWebsitesData with ZAlarm + refresh button

--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -166,6 +166,9 @@ section .buttonItem
 	position: relative
 	text-align: left
 
+	&.only-icon
+		padding-left: 14px
+
 section .buttonItem .ellipse
 	-webkit-line-clamp: 3
 	overflow: hidden
