--- a/browserViews/css/theme/text-color-white.sass
+++ b/browserViews/css/theme/text-color-white.sass
@@ -30,7 +30,8 @@ p,
 details summary
 	color: rgba($textColor, 0.8)
 
-details summary ~ *
+details summary ~ *,
+time
 	color: rgba($textColor, 0.6)
 
 /*			---- Disabled / Hint text ----			*/
