--- a/browserViews/websitesData.twig
+++ b/browserViews/websitesData.twig
@@ -33,7 +33,7 @@
 				{%- endif %}
 
 				{% if not data.logged -%}
-				<span class="folder" data-translate-id="not_logged" v-if="!data.logged"></span>
+				<span class="folder" data-translate-id="not_logged"></span>
 				{%- endif %}
 			</div>
 		</a>
