--- a/browserViews/websitesData.njk
+++ b/browserViews/websitesData.njk
@@ -1,7 +1,10 @@
 <section class="websites-data grid no-r-gap">
 	<h1 class="grid-12">
 		Websites data
-		{% if lastUpdate %}<time datetime="{{ lastUpdate.toIsoString() }}">{{ lastUpdate | date("m/d/Y H:i:s", "Europe/Paris") }}</time>{% endif %}
+		{% if lastUpdate -%}
+			{# | date("m/d/Y H:i:s", "Europe/Paris") #}
+			<time datetime="{{ lastUpdate.toISOString() }}">{{ lastUpdate.toLocaleString('fr-FR', { timeZone: 'Europe/Paris' }) }}</time>
+		{%- endif %}
 	</h1>
 	{% for item in websitesData %}
 		{%- set website = item.websiteName -%}
@@ -12,7 +15,7 @@
 
 			<img class="icon" src="{{ data.websiteIcon }}" alt="" />
 
-			<div class="title" data-count="{{ data.logged ? data.count : '' }}">{{website}}</div>
+			<div class="title" data-count="{% if data.logged %}{{ data.count }}"{% endif %}>{{website}}</div>
 			<div class="websiteData">
 				{% if data.logged and folder.folderUrl and folder.folderCount -%}
 					{%- for folderData in data.folders -%}
