move from twing to nunjuck rendering

--- a/browserViews/variousInfos.njk
+++ b/browserViews/variousInfos.njk
@@ -16,7 +16,7 @@
 
 {% if wsClientNames -%}
 	<p>Web extensions :</p>
-	{% include '_wsClientNames.twig' %}
+	{% include '_wsClientNames.njk' %}
 {%- endif %}
 
 {% if chromeNativeInstallersStates -%}
