--- a/browserViews/index-main.pug
+++ b/browserViews/index-main.pug
@@ -8,6 +8,9 @@ main.grid
 	div.display-contents(data-menu-show='main')
 		section#websitesData
 
+	div.display-contents(data-menu-show='main')
+		section#wsClientDatas
+
 	div.grid-12.grid.display-contents(data-menu-show='main')
 		div.grid-3
 			label(for="main_textarea_input", data-translate-id="textarea") Text area
