--- a/browserViews/_wsClientDatas.njk
+++ b/browserViews/_wsClientDatas.njk
@@ -26,7 +26,7 @@
 
 					<a href="https://dnslytics.com/ip/{{ client.tabData.ip }}" title="DNSlytics" target="_blank"><img src="https://dnslytics.com/favicon.ico" alt="" height="16" width="16"></a>{% endif -%}
 					{%- if client.tabData.ipMore and client.tabData.domain %}&nbsp;{% endif -%}
-					{%- if client.tabData.domain %}<a href="https://dnschecker.org/#A/{{ client.tabData.domain }}" title="DNSlytics" target="_blank"><img src="https://dnschecker.org/themes/common/images/general/favicon-32.png" alt="" height="16" width="16"></a>{% endif -%}
+					{%- if client.tabData.domain %}<a href="https://dnschecker.org/#A/{{ client.tabData.domain }}" title="DNS Checker" target="_blank"><img src="https://dnschecker.org/themes/common/images/general/favicon-32.png" alt="" height="16" width="16"></a>{% endif -%}
 				{%- endif -%}
 				{% if client.tabData.openGraph %}
 					{% set data = client.tabData %}
