wsClientData - id in template, url mover in page, article instead of div

--- a/browserViews/_wsClientDatas.njk
+++ b/browserViews/_wsClientDatas.njk
@@ -1,9 +1,9 @@
 <section class="ws-client-datas grid no-r-gap">
 	{% if wsClientDatas -%}
 	<h1 class="grid-12">Web extensions</h1>
-	{%- for client in wsClientDatas %}
+	{%- for id, client in wsClientDatas %}
 	<div class="grid-3">
-		<div class="buttonItem wsClientDatasItem">
+		<article id="{{ id }}" class="buttonItem wsClientDatasItem"{% if client.tabData and client.tabData.url %} data-tab-data-url="{{ client.tabData.url }}" draggable="true"{% endif %}>
 			{%- if client.tabData.faviconUrl -%}
 			<picture>
 				<img class="icon" src="{{ client.tabData.faviconUrl }}" width="32" height="32" alt="" crossorigin="anonymous" />
@@ -43,7 +43,7 @@
 					</div>
 				</div>
 			{%- endif -%}
-		</div>
+		</article>
 	</div>{% endfor %}
 	{%- endif %}
 </section>
