--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -245,6 +245,10 @@ section article.wsClientDatasItem
 	&:not(.activated) .openGraphData
 		display: none
 
+	.og-image
+		max-height: 150px
+		max-width: 100%
+
 	.title,
 	.wsClientDatas
 		margin-bottom: 0.5em
