ws item - buttons, window size

--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -239,9 +239,13 @@ section article.wsClientDatasItem
 	.wsClientDatas
 		margin-bottom: 0.5em
 
-section div.wsClientDatas a
-	display: inline-block
-	margin-right: 0.2em
+section div.wsClientDatas .button
+	font-size: 24px
+	margin-left: 0
+	margin-right: 0
+	padding: 8px
+	> img
+		display: inline-block
 
 section .websiteItem .btn-login
 	font-size: inherit
