ws item - fix buttons

--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -239,6 +239,11 @@ section article.wsClientDatasItem
 	.wsClientDatas
 		margin-bottom: 0.5em
 
+	.button,
+	button
+		margin-left: 0
+		margin-right: 0
+
 section div.wsClientDatas .button
 	font-size: 24px
 	margin-left: 0
