--- a/browserViews/_wsClientDatas.njk
+++ b/browserViews/_wsClientDatas.njk
@@ -4,7 +4,10 @@
 	{%- for id, client in wsClientDatas %}
 	<div class="grid-4">
 		{% set ogData = client.tabData.openGraph %}
-		<article id="{{ id }}" title="{{ client.browserName }}" class="buttonItem wsClientDatasItem"{% if client.tabData and client.tabData.url %} data-tab-data-url="{{ client.tabData.url }}" draggable="true"{% endif %}>
+
+		{% set pageRatings = client.tabData.pageRating | default([]) %}
+		{% set isMature = pageRatings.includes('mature') or pageRatings.includes('RTA-5042-1996-1400-1577-RTA') %}
+		<article id="{{ id }}" title="{{ client.browserName }}" class="buttonItem wsClientDatasItem{% if isMature %} isMature{% endif %}"{% if client.tabData and client.tabData.url %} data-tab-data-url="{{ client.tabData.url }}" draggable="true"{% endif %}>
 			{%- if client.tabData.faviconUrl -%}
 			<picture>
 				<img class="icon" src="{{ client.tabData.faviconUrl }}" width="32" height="32" alt="" crossorigin="anonymous" />
