code tester - now use flem

--- a/browserViews/iframe.pug
+++ b/browserViews/iframe.pug
@@ -7,9 +7,7 @@ block head
 	// HEAD
 
 block head-js
-	script(src="js/_fix_exports.js")
-	script(src="js/_import-map-loader.js")
-	script(src='lib/string-strip-html/string-strip-html.umd.js')
-	script(src='js/iframe.js', type="lazy-module")
+	script(src="./lib/flems/flems.html", type="text/javascript", charset="utf-8")
+	script(src='js/iframe.js', type="module")
 
 block body
