code tester - manage dat from main page and lazy load

--- a/browserViews/index-main.pug
+++ b/browserViews/index-main.pug
@@ -25,4 +25,4 @@ main.grid
 			svg.loader(width="1em", height="1em")
 				circle(cx="0.5em", cy="0.5em", r="0.45em")
 
-	iframe#iframe.grid-12(src='http://localhost:42080/iframe.html', data-menu-show='code-tester')
+	iframe#iframe.grid-12(src='http://localhost:42080/iframe.html', data-menu-show='code-tester', loading="lazy")
