--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -25,6 +25,9 @@ body
 	border-color: rgba(0, 0, 0, 0.2)
 	height: calc(100vh - 60px - 2rem)
 	width: 100%
+html:not(.loaded)
+	#iframe
+		display: none
 
 header
 	display: flex
