--- a/browserViews/css/theme/input.sass
+++ b/browserViews/css/theme/input.sass
@@ -8,6 +8,9 @@ textarea
 	max-height: 25px
 	padding-left: 2px
 
+textarea
+	max-height: 3 * 25px
+
 input[type="number"]
 	-webkit-appearance: textfield
 	-moz-appearance: textfield
