--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -1,7 +1,7 @@
-@import "reset.sass"
-@import "grid.sass"
-@import "common.sass"
-@import "materialLoader"
+@use "./reset.sass"
+@use "./grid.sass"
+@use "./common.sass"
+@use "./materialLoader.sass"
 
 //#codeInputs
 //	display: flex
