--- a/browserViews/css/theme/text-color-black.sass
+++ b/browserViews/css/theme/text-color-black.sass
@@ -1,3 +1,5 @@
+@use "sass:color"
+
 $textColor: black
 $linkColor: rgb(50, 159, 255)
 
@@ -11,7 +13,7 @@ input[type='checkbox'],
 input[type='radio'],
 select,
 #searchInput
-	color: lighten($textColor, 80%)
+	color: color.adjust($textColor, $lightness: 80%)
 
 select:hover
 	color: unset !important
